@@ -210,15 +210,12 @@ showtitle = true
 # Set this to display only the graph data - no axes, grid, or legend.
 #graphonly = true
 
-# These list services that should follow the maximum or minimum value returned,
-# instead of the average. The values must match the service_description values
-# in the Nagios configuration.
-maximums = Current Load,PLW,Procs: total,Procs: zombie,User Count
-minimums = APCUPSD,Mem: free,Mem: swap
-
-# These list services that should have additional data saved and graphed.
 # For services listed here, graphs that contain averages (e.g. weekly, monthly)
-# will include maximum/minimum values as well.
+# will include maximum/minimum values as well.  This is useful for services
+# such as ping or http transfer rates so that you see not only the average
+# values, but also the maximum and minimum values over time.
+# Each is a list of services separated by commas.
+# These are not related to the RRA maximum, minimum, or last (defined below).
 withmaximums = PING
 withminimums = PING
 
@@ -267,13 +264,27 @@ withminimums = PING
 # Specify a step size for specific hosts and services.
 #stepsizes = HOST,SERVICE,DATABASE=600;HOST,SERVICE,.*=1200;.*,.*,.*=300
 
-# RRD rows.  These numbers control the number of stored data values and thus
-# RRD file size.  They are used in the RRA arguments when creating RRD files.
-# There are 4 RRA arguments:
-#   RRA:(AVERAGE|MIN|MAX):0.5:1:row1
-#   RRA:(AVERAGE|MIN|MAX):0.5:6:row2
-#   RRA:(AVERAGE|MIN|MAX):0.5:24:row3
-#   RRA:(AVERAGE|MIN|MAX):0.5:288:row4
+# By default, each RRD records average values.  To record maximum, minimum, or
+# last value instead of the average value, specify the service name here.
+# Each is a list of service names separated by commas.
+maximums = Current Load,PLW,Procs: total,Procs: zombie,User Count
+minimums = APCUPSD,Mem: free,Mem: swap
+lasts =
+
+# RRD rows and steps.  These numbers control the number of stored data values
+# and thus RRD file size.  They are used when creating RRD files.
+# Each RRD file is created with 4 RRA arguments:
+#   RRA:(AVERAGE|MIN|MAX|LAST):xff:step1:row1
+#   RRA:(AVERAGE|MIN|MAX|LAST):xff:step2:row2
+#   RRA:(AVERAGE|MIN|MAX|LAST):xff:step3:row3
+#   RRA:(AVERAGE|MIN|MAX|LAST):xff:step4:row4
+#
+# Using default values, the RRAs are as follows:
+#   RRA:AVERAGE:0.5:1:600
+#   RRA:AVERAGE:0.5:6:700
+#   RRA:AVERAGE:0.5:24:775
+#   RRA:AVERAGE:0.5:288:797
+#
 # The rows are defined by the four resolution values.
 # The default results in RRD files that are 20K to 75K in size:
 #resolution = 600 700 775 797
@@ -281,6 +292,20 @@ withminimums = PING
 #resolution = 17280 17520 32850 1095
 # Specify resolution for specific hosts and services.
 #resolutions = HOST,SERVICE,.*=17280 17520 32850 1095;.*,.*,.*=600 700 775 797
+#
+# The steps are defined by the four step values.
+# The default results in consolidated data points for day, week, month, year
+#step = 1 6 24 288
+# Specify step for specific hosts and services.
+#steps = HOST,SERVICE,.*=1 12 48 596;.*,.*,.*=1 6 24 288
+#
+# The xff (xfiles factor) defines what part of a consolidation interval may be
+# made up from UNKNOWN data while the consolidated value is still regarded as
+# known.  It is given as the ratio of allowed UNKNOWN PDPs to the number of
+# PDPs in the interval.  It ranges from 0 to 1, exclusive.
+#xff = 0.5
+# Specify xff for specific hosts and services.
+#xffs = HOST,SERVICE,.*=0.9;.*,.*,.*=0.5
 
 # This lists data that need to go into separate rrd files.  This is used
 # when creating new rrd files when a change to the map is not possible.  Use
